# argocd-playground

./: .envrc  .gitignore  Chart.yaml  README.md  applicationset.yaml  datadog-custom-metric.sh  justfile  mysecret.json  mysecret.yaml  values.yaml
app-of-apps/: app-of-apps.yaml  values.yaml
app-of-apps/templates/: datadog.yaml  kafka-cluster.yaml  kube-prom-stack.yaml  sealed-secrets.yaml  strimzi.yaml
apps/conduktor/: config.json  helmfile.yaml  postgres.yaml  values.yaml
apps/guacamole/: config.json  gua.yaml  helmfile.yaml  (+2 more)
bootstrap/: argo-cm.yaml  argocd-repo-server-ksops-patch.yaml  argocd-server-patch.yaml  kustomization.yaml
bootstrap-argo/: install-argo.yaml
datadog/: datadog-agent.yaml  sealed-datadog.yaml
kafka/: cluster-role.yaml  configMap-grafana-dashboard-kafka-exporter.yaml  configMap-grafana-dashboard-kafka.yaml  configMap-grafana-dashboard.yaml  flake.nix  kafka-strimzi-install.yaml  my-topic.yaml  pod-monitor.yaml  podmonitor.yaml  prometheus-rules.yaml  service-monitor.yaml
kafka/goose/: Cargo.toml
kafka/goose/src/: main.rs
kafka/kafka-locust/: README.md  pyproject.toml
kafka/kafka-locust/src/kafka_locust/: __init__.py  locustfile.py
kafka/kafka-locust/src/kafka_locust/clients/: kafka_client.py
kafka/kafka-locust/src/kafka_locust/shapes/: single_burst_shape.py  wave_shape.py
kafka/kafka-locust/src/kafka_locust/users/: abstract_kafka_producer.py  my_producer_user.py
producers/: 1kb.txt  kaf-producer-1.sh  kaf-producer-30.sh  kaf-producer-300.sh  kaf-producer-60.sh
templates/: kafka-cluster.yaml  strimzi.yaml
(+38 files in other folders)
