[project]
name = "kafka-locust"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Marcus Weber", email = "marcus.wallau@gmail.com" }
]
dependencies = [
    "locust>=2.24.1",
    "locust-plugins[kafka]>=4.4.2",
    "confluent-kafka>=2.3.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/kafka_locust"]
